# rubik-cube

./: .gitignore  CMakeLists.txt  README.md
src/: viewer_gl.cpp  virtual_rotate.hpp
